Navbar spacing corrected to provide padding in mobile view

--- a/records-api-front-end/src/components/NavBar/styles.css
+++ b/records-api-front-end/src/components/NavBar/styles.css
@@ -1,3 +1,7 @@
+#navbar {
+  padding: 0.3rem 0.75rem;
+}
+
 .navbar-brand {
   font-weight: 700;
 }
